// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PillButton> component in active, collapsed state (with content prop) should render correctly 1`] = `
<div>
  <div
    class="PillButton"
  >
    <div
      class="PillButton__label PillButton__label--isActive"
    >
      Pill name
    </div>
    <div
      class="PillButton__pill PillButton__pill--isActive"
      role="button"
      tabindex="0"
    >
      <span
        class="PillButton__pillLabel"
      >
        This pill is in use
      </span>
      <button
        class="PillButton__button"
        type="button"
      >
        <svg
          aria-label="clear label"
          fill="currentColor"
          height="1em"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M405 136.798L375.202 107 256 226.202 136.798 107 107 136.798 226.202 256 107 375.202 136.798 405 256 285.798 375.202 405 405 375.202 285.798 256z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<PillButton> component in active, open state (content and isOpen prop) should render correctly 1`] = `
<div>
  <div
    class="PillButton"
  >
    <div
      class="PillButton__label PillButton__label--isActive"
    >
      Pill name
    </div>
    <div
      class="PillButton__pill PillButton__pill--isActive PillButton__pill--isOpen"
      role="button"
      tabindex="0"
    >
      <span
        class="PillButton__pillLabel"
      >
        This pill is in use
      </span>
      <button
        class="PillButton__button PillButton__button--isOpen"
        type="button"
      >
        <svg
          aria-label="up arrow"
          class="PillButton__arrowIcon"
          fill="currentColor"
          height="1em"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<PillButton> component in inactive, collapsed state (with minimal props) should render correctly 1`] = `
<div>
  <div
    class="PillButton"
  >
    <div
      class="PillButton__label"
    />
    <div
      class="PillButton__pill"
      role="button"
      tabindex="0"
    >
      <span
        class="PillButton__pillLabel"
      >
        Pill name
      </span>
      <button
        class="PillButton__button"
        type="button"
      >
        <svg
          aria-label="down arrow"
          class="PillButton__arrowIcon"
          fill="currentColor"
          height="1em"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`<PillButton> component in inactive, open state (isOpen prop) should render correctly 1`] = `
<div>
  <div
    class="PillButton"
  >
    <div
      class="PillButton__label"
    />
    <div
      class="PillButton__pill PillButton__pill--isOpen"
      role="button"
      tabindex="0"
    >
      <span
        class="PillButton__pillLabel"
      >
        Pill name
      </span>
      <button
        class="PillButton__button PillButton__button--isOpen"
        type="button"
      >
        <svg
          aria-label="up arrow"
          class="PillButton__arrowIcon"
          fill="currentColor"
          height="1em"
          role="img"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 512 512"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 294.1L383 167c9.4-9.4 24.6-9.4 33.9 0s9.3 24.6 0 34L273 345c-9.1 9.1-23.7 9.3-33.1.7L95 201.1c-4.7-4.7-7-10.9-7-17s2.3-12.3 7-17c9.4-9.4 24.6-9.4 33.9 0l127.1 127z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
